--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,28 @@
-anyio==3.5.0
-appdirs==1.4.4
-asgiref==3.4.1
-autopep8==1.6.0
-certifi==2021.10.8
-charset-normalizer==2.0.10
-click==8.0.3
-dnspython==2.1.0
-email-validator==1.1.3
-fastapi==0.71.0
-flake8==4.0.1
-greenlet==1.1.2
-h11==0.12.0
-httptools==0.2.0
-idna==3.3
-importlib-metadata==4.10.1
-itsdangerous==2.0.1
-Jinja2==3.0.3
-MarkupSafe==2.0.1
-mccabe==0.6.1
-orjson==3.6.5
-pdfkit==1.0.0
-pkg_resources==0.0.0
+anyio==3.6.1
+attrs==22.1.0
+autopep8==1.7.0
+coverage==6.5.0
+fastapi==0.85.0
+flake8==5.0.4
+greenlet==1.1.3
+idna==3.4
+iniconfig==1.1.1
+mccabe==0.7.0
+packaging==21.3
+pluggy==1.0.0
 psycopg2==2.9.3
-pycodestyle==2.8.0
-pydantic==1.9.0
-pyee==8.2.2
-pyflakes==2.4.0
-pyppeteer==1.0.2
-python-dotenv==0.19.2
-python-multipart==0.0.5
-PyYAML==5.4.1
-requests==2.27.1
-six==1.16.0
-sniffio==1.2.0
-SQLAlchemy==1.4.29
-starlette==0.17.1
+py==1.11.0
+pycodestyle==2.9.1
+pydantic==1.10.2
+pyflakes==2.5.0
+pyparsing==3.0.9
+pytest==7.1.3
+pytest-cov==4.0.0
+pytest-dotenv==0.5.2
+python-dotenv==0.21.0
+sniffio==1.3.0
+SQLAlchemy==1.4.41
+starlette==0.20.4
 toml==0.10.2
-tqdm==4.62.3
-typing_extensions==4.0.1
-ujson==4.3.0
-urllib3==1.26.8
-uvicorn==0.15.0
-uvloop==0.16.0
-watchgod==0.7
-websockets==10.1
-zipp==3.7.0
+tomli==2.0.1
+typing_extensions==4.3.0
