--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,28 @@
-anyio==3.6.1
-attrs==22.1.0
-autopep8==1.7.0
-coverage==6.5.0
-fastapi==0.85.0
-flake8==5.0.4
-greenlet==1.1.3
-idna==3.4
-iniconfig==1.1.1
-mccabe==0.7.0
-packaging==21.3
-pluggy==1.0.0
-psycopg2==2.9.3
-py==1.11.0
-pycodestyle==2.9.1
-pydantic==1.10.2
-pyflakes==2.5.0
-pyparsing==3.0.9
-pytest==7.1.3
-pytest-cov==4.0.0
-pytest-dotenv==0.5.2
-python-dotenv==0.21.0
-sniffio==1.3.0
-SQLAlchemy==1.4.41
-starlette==0.20.4
-toml==0.10.2
-tomli==2.0.1
-typing_extensions==4.3.0
+anyio>=3.6.1
+attrs>=22.1.0
+autopep8>=1.7.0
+coverage>=6.5.0
+fastapi>=0.85.0
+flake8>=5.0.4
+greenlet>=1.1.3
+idna>=3.4
+iniconfig>=1.1.1
+mccabe>=0.7.0
+packaging>=21.3
+pluggy>=1.0.0
+psycopg2>=2.9.3
+py>=1.11.0
+pycodestyle>=2.9.1
+pydantic>=1.10.2
+pyflakes>=2.5.0
+pyparsing>=3.0.9
+pytest>=7.1.3
+pytest-cov>=4.0.0
+pytest-dotenv>=0.5.2
+python-dotenv>=0.21.0
+sniffio>=1.3.0
+SQLAlchemy>=1.4.41
+starlette>=0.20.4
+toml>=0.10.2
+tomli>=2.0.1
+typing_extensions>=4.3.0
