--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,8 @@ POSTGRES_PASSWORD=postgres
 POSTGRES_SERVER=127.0.0.1
 POSTGRES_PORT=5432
 POSTGRES_DB=postgres
+SHAKEMAP_SERVER=127.0.0.1
+SHAKEMAP_PORT=5432
+SHAKEMAP_USER=postgres
+SHAKEMAP_PASSWORD=postgres
+SHAKEMAP_DB=postgres
