cicd: set up docker compose to create database and pgadmin

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,17 @@ POSTGRES_PASSWORD=postgres
 POSTGRES_SERVER=127.0.0.1
 POSTGRES_PORT=5432
 POSTGRES_DB=postgres
+
+APP_USER=postgres
+APP_DB=db
+APP_PASS=postgres
+
 SHAKEMAP_SERVER=127.0.0.1
 SHAKEMAP_PORT=5432
 SHAKEMAP_USER=postgres
 SHAKEMAP_PASSWORD=postgres
 SHAKEMAP_DB=postgres
+
+PGADMIN_DEFAULT_EMAIL=some@email.com
+PGADMIN_DEFAULT_PASSWORD=password
+PGADMIN_CONFIG_SERVER_MODE=False
