--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,9 @@ POSTGRES_SERVER=127.0.0.1
 POSTGRES_PORT=5432
 POSTGRES_DB=postgres
 
-APP_USER=postgres
-APP_DB=db
-APP_PASS=postgres
+DB_USER=postgres
+DB_NAME=db
+DB_PASSWORD=postgres
 
 SHAKEMAP_SERVER=127.0.0.1
 SHAKEMAP_PORT=5432
