--- a/requirements.txt
+++ b/requirements.txt
@@ -22,11 +22,13 @@ pytest>=7.1.3
 pytest-cov>=4.0.0
 pytest-dotenv>=0.5.2
 python-dotenv>=0.21.0
-reia.datamodel @ git+ssh://git@github.com/swiss-seismological-service/reia.datamodel.git
+reia.datamodel @ git+https://github.com/swiss-seismological-service/reia.datamodel.git@feature/cli
 sniffio>=1.3.0
 SQLAlchemy>=1.4.41
+scipy>=1.10.0
 starlette>=0.20.4
 toml>=0.10.2
 tomli>=2.0.1
+typer>=0.7.0
 typing_extensions>=4.3.0
 uvicorn>=0.20.0
