--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 .env.production
 logs/
 
+*/postgresql.conf
+*/postgresql.conf.dev
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
