--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_SERVER=127.0.0.1
+POSTGRES_HOST=127.0.0.1
 POSTGRES_PORT=5432
 POSTGRES_DB=postgres
 
