feat: add root path to settings

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,5 @@ SHAKEMAP_DB=postgres
 PGADMIN_DEFAULT_EMAIL=some@email.com
 PGADMIN_DEFAULT_PASSWORD=password
 PGADMIN_CONFIG_SERVER_MODE=False
+
+ROOT_PATH=reiaws
