--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,7 @@ pytest-dotenv>=0.5.2
 python-dotenv>=0.21.0
 reia.datamodel @ git+https://github.com/swiss-seismological-service/reia.datamodel.git
 sniffio>=1.3.0
-SQLAlchemy>=1.4.41
+SQLAlchemy<2.0.0
 scipy>=1.10.0
 starlette>=0.20.4
 toml>=0.10.2
