feat: add endpoint for danger level

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,7 @@ SHAKEMAP_PORT=5432
 SHAKEMAP_USER=postgres
 SHAKEMAP_PASSWORD=postgres
 SHAKEMAP_DB=postgres
+DANGERLEVEL_DB=postgres
 
 PGADMIN_DEFAULT_EMAIL=some@email.com
 PGADMIN_DEFAULT_PASSWORD=password
