feat: rename and separate scenario and earthquake db credentials

--- a/.env.example
+++ b/.env.example
@@ -8,12 +8,17 @@ DB_USER=postgres
 DB_NAME=db
 DB_PASSWORD=postgres
 
-SHAKEMAP_SERVER=127.0.0.1
-SHAKEMAP_PORT=5432
-SHAKEMAP_USER=postgres
-SHAKEMAP_PASSWORD=postgres
-SHAKEMAP_DB=postgres
-DANGERLEVEL_DB=postgres
+SCENARIO_INFO_SERVER=127.0.0.1
+SCENARIO_INFO_PORT=5432
+SCENARIO_INFO_USER=postgres
+SCENARIO_INFO_PASSWORD=postgres
+SCENARIO_INFO_DB=postgres
+
+EARTHQUAKE_INFO_SERVER=127.0.0.1
+EARTHQUAKE_INFO_PORT=5432
+EARTHQUAKE_INFO_USER=postgres
+EARTHQUAKE_INFO_PASSWORD=postgres
+EARTHQUAKE_INFO_DB=postgres
 
 PGADMIN_DEFAULT_EMAIL=some@email.com
 PGADMIN_DEFAULT_PASSWORD=password
