--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ pytest>=7.1.3
 pytest-cov>=4.0.0
 pytest-dotenv>=0.5.2
 pydantic<=2.0.0
-reia.datamodel @ git+https://github.com/swiss-seismological-service/reia.datamodel.git
+reia @ git+https://github.com/swiss-seismological-service/REIA.git
 scipy>=1.10.1
 SQLAlchemy>=2.0.0
 uvicorn>=0.20.0
