feat: remove origin specific settings, add CORS settings

--- a/.env.example
+++ b/.env.example
@@ -4,17 +4,8 @@ POSTGRES_HOST=127.0.0.1
 POSTGRES_PORT=5432
 POSTGRES_DB=postgres
 
-SCENARIO_INFO_SERVER=127.0.0.1
-SCENARIO_INFO_PORT=5432
-SCENARIO_INFO_USER=postgres
-SCENARIO_INFO_PASSWORD=postgres
-SCENARIO_INFO_DB=postgres
-
-EARTHQUAKE_INFO_SERVER=127.0.0.1
-EARTHQUAKE_INFO_PORT=5432
-EARTHQUAKE_INFO_USER=postgres
-EARTHQUAKE_INFO_PASSWORD=postgres
-EARTHQUAKE_INFO_DB=postgres
+ALLOW_ORIGINS=["http://localhost","http://localhost:5000"]
+ALLOW_ORIGIN_REGEX=""
 
 ROOT_PATH=reiaws
 WEB_CONCURRENCY=8
