--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,15 @@ autopep8>=1.7.0
 coverage>=6.5.0
 fastapi>=0.85.0
 flake8>=5.0.4
+geoalchemy2>=0.14.2
 gunicorn>=20.1.0
+jinja2>=3.1.2
 pandas>=2.0.0
 psycopg2>=2.9.3
 pytest>=7.1.3
 pytest-cov>=4.0.0
 pytest-dotenv>=0.5.2
 pydantic<2.0.0
-reia @ git+https://github.com/swiss-seismological-service/REIA.git
 scipy>=1.10.1
 SQLAlchemy>=2.0.0
 uvicorn>=0.20.0
