--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,17 @@
-autopep8>=1.7.0
-coverage>=6.5.0
-fastapi>=0.85.0
-flake8>=5.0.4
-geoalchemy2>=0.14.2
-gunicorn>=20.1.0
-jinja2>=3.1.2
-pandas>=2.0.0
-psycopg2>=2.9.3
-pytest>=7.1.3
-pytest-cov>=4.0.0
+autopep8>=2.0.4
+coverage>=7.4.1
+fastapi>=0.109.2
+flake8>=7.0.0
+geoalchemy2>=0.14.3
+gunicorn>=21.2.0
+jinja2>=3.1.3
+pandas>=2.2.0
+psycopg2>=2.9.9
+pytest>=8.0.0
+pytest-cov>=4.1.0
 pytest-dotenv>=0.5.2
-pydantic<2.0.0
-scipy>=1.10.1
-SQLAlchemy>=2.0.0
-uvicorn>=0.20.0
+pydantic>=2.6.1
+pydantic_settings>=2.1.0
+scipy>=1.12.0
+SQLAlchemy>=2.0.25
+uvicorn>=0.26.0
